Updated the latest job.yml

--- a/src/job.yml
+++ b/src/job.yml
@@ -3,13 +3,13 @@ code: model
 command: >-
   python train.py
   --training_data ${{inputs.training_data}}
-  --reg_rate ${{inuts.reg_rate}}
+  --reg_rate ${{inputs.reg_rate}}
 inputs:
   training_data: 
     type: uri_folder 
     path: azureml:diabetes-dev-folder:1
   reg_rate: 0.01
 environment: azureml:AzureML-sklearn-0.24-ubuntu18.04-py37-cpu@latest
-compute: azureml:MLOpsTest001
+compute: azureml:testdev-ms-learn001
 experiment_name: diabetes-training-date-example
 description: MLOpsTraining-ML-Microsoft-Learning-Course
